osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_call_rvalue/test_not_has_result_and_result_used_in_list_literal.txt
error: you cannot use the result of this function call because it has no return value
--> main.sml:1:21
     |
   1 | Boz = Baz(qux=[1, 2, HasNoResult()])
     |                      ^ this function has no result, and thus its result cannot be used:
                            | - `HasNoResult(...)` is OK, however:
                            | - `Foo = Bar + HasNoResult(...)` and
                            | - `Bar(qux=HasNoResult(...))` are not OK